[gd_scene load_steps=15 format=2]

[ext_resource path="res://Screens/assets/blue_button06.png" type="Texture" id=1]
[ext_resource path="res://Screens/assets/FontUI.tres" type="DynamicFont" id=2]
[ext_resource path="res://Screens/assets/green_button09.png" type="Texture" id=3]
[ext_resource path="res://Screens/assets/green_button10.png" type="Texture" id=4]
[ext_resource path="res://Screens/UI/PopupGameOver.gd" type="Script" id=5]
[ext_resource path="res://Screens/assets/red_button09.png" type="Texture" id=6]
[ext_resource path="res://Screens/assets/red_button08.png" type="Texture" id=7]
[ext_resource path="res://Screens/assets/jingles_STEEL10.ogg" type="AudioStream" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 49, 49 )
modulate_color = Color( 1.5, 1.5, 1.5, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 49, 45 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 49, 49 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 49, 49 )
modulate_color = Color( 1.5, 1.5, 1.5, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 49, 45 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 49, 49 )

[node name="PopupDialog" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 250, 250 )
rect_pivot_offset = Vector2( 125, 125 )
size_flags_horizontal = 6
size_flags_vertical = 6
popup_exclusive = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 32
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="NinePatchRect/MarginContainer"]
margin_left = 16.0
margin_top = 32.0
margin_right = 344.0
margin_bottom = 624.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_left = 16.0
margin_top = 32.0
margin_right = 344.0
margin_bottom = 624.0

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 328.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 162.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 162.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "YOU"
align = 1

[node name="Score" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 162.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 328.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 162.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "BEST"
align = 1

[node name="Best" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 162.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="NewRecord" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 281.0
margin_right = 328.0
margin_bottom = 311.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "NEW RECORD"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 328.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Retry" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 38.0
margin_top = 113.0
margin_right = 123.0
margin_bottom = 163.0
rect_min_size = Vector2( 80, 50 )
size_flags_horizontal = 6
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_pressed = Color( 0.560784, 0.560784, 0.560784, 1 )
shortcut_in_tooltip = false
text = "RETRY"

[node name="Quit" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 207.0
margin_top = 113.0
margin_right = 287.0
margin_bottom = 163.0
rect_min_size = Vector2( 80, 50 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_pressed = Color( 0.560784, 0.560784, 0.560784, 1 )
shortcut_in_tooltip = false
text = "QUIT"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Tween" type="Tween" parent="."]

[node name="NewRecordSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
